docs(crack): update docs